spring-zuul/src/main/java/com/example/zuul/filter/AccessFilter.java
package com.example.zuul.filter;

import com.netflix.zuul.ZuulFilter;
import com.netflix.zuul.context.RequestContext;
import com.netflix.zuul.exception.ZuulException;
import org.bouncycastle.cert.ocsp.Req;

import javax.servlet.http.HttpServletRequest;

public class AccessFilter extends ZuulFilter {
    @Override
    public String filterType() {
        //pre 在请求被路由之前调用
        //routing
        //post
        //error
        return "pre";
    }

    @Override
    public int filterOrder() {
        //定义多个过滤器时的执行顺序
        return 0;
    }

    @Override
    public boolean shouldFilter() {
        return true;
    }

    @Override
    public Object run() throws ZuulException {
        RequestContext ctx = RequestContext.getCurrentContext();
        HttpServletRequest request = ctx.getRequest();
        System.out.println("accssToken=" + request.getParameter("accssToken"));
        if(request.getParameter("accessToken") == null) {
            ctx.setSendZuulResponse(false);
            ctx.setResponseStatusCode(401);
            return null;
        }
        return null;
    }
}
